# Priority: Critical
# Test ID: C000006 - # Might not match TestRail ID - to be changed if necessary
# Title: Test light account
# Expected Result:
#   1. User can create a light account successfully
#   2. Onboarding flow displays correct content
#   3. Ensure can't view receive screen
#   4. Ensure backup account modal and buttons are functional


appId: ${MAESTRO_APP_ID}
env:
    FULL_PIN: ${MAESTRO_EDGE_NEW_ACCOUNT_PIN}
tags:
- all
- C000006 
- light-account
---
- runFlow:
    file: ../common/launch-cleared.yaml

# Validate onboarding messages
- runFlow:
    label: "Validate onboarding messages"
    commands:
      # 1st screen
      - assertVisible: "Edge is the open source tool you need\nto invest, secure, and put your crypto in action."
      - assertVisible: "Learn More"
      - tapOn: Get Started

      # 2nd screen
      - assertVisible: "We've Got You\nCovered"
      - assertVisible: "Say goodbye to writing down insecure backups on paper. With client-side encryption, automatic account backup and 2FA, Edge simplifies self-custody for everyone."
      - assertVisible: "Users can access seed phrases within the app at their discretion."
      - assertVisible: Skip
      - tapOn: Next

      # 3rd screen
      - assertVisible: "They're Your Assets\nYou're in Control"
      - assertVisible: "Edge has zero access to user funds, which means no account freezes or asset forfeiture. Buy, sell, and trade with peace of mind."
      - assertVisible: Skip
      - tapOn: Next

      # 4th screen
      - assertVisible: "Your Privacy is\nOur Priority"
      - assertVisible: "Edge holds none of your personal information, not even an email address or phone number. We do not track blockchain transactions in your account and we're open source to prove it."
      - assertVisible: Skip
      - tapOn: Next

      # 5th screen
      - assertVisible: "Help Is Here If\nYou Need It"
      - assertVisible: "Reach our support team, made up of real humans, by live phone call, live chat, and email every day of the week."
      - assertVisible: Skip
      - tapOn: Next

# Complete onboarding flow
- runFlow:
    label: "Complete onboarding flow"
    commands:
      # PIN screen
      - extendedWaitUntil:
          visible: "Set PIN"
          timeout: 10000
      - inputText: ${FULL_PIN}
      - tapOn: Next

      # Create wallets and enter account
      - waitForAnimationToEnd:
          timeout: 10000
      # If the request notifications modal show with "Security is Our Priority" then cancel it - Currently appears before wallets are created
      - extendedWaitUntil:
          visible: Security is Our Priority
          timeout: 25000
          optional: true
      - runFlow:
          when:
            visible: "Security is Our Priority"
          commands:
            - tapOn:
                text: "Cancel"
          label: "Request notifications modal"
      - extendedWaitUntil: 
          visible: "Choose Wallets to Add"
          timeout: 20000
      - assertVisible: ${"BTC.*"}
      - assertVisible: ${"ETH.*"}
      - assertVisible: ${"LTC.*"}
      - tapOn: Next
      - waitForAnimationToEnd:
          timeout: 5000

# Dismiss Web3 Handle Modal
- runFlow:
    when:
      visible: "Claim Your Web3 Handle"
    commands:
      - tapOn:
          text: "Not Now"
    label: "Dismiss Web3 Handle Modal"
# Confirm flow completed successfully
- extendedWaitUntil: 
    visible: "Assets"
    timeout: 20000
    label: "Light account created successfully"

# Ensure visible reminder to backup account & correct modal
- runFlow:
    label: "Ensure visible reminder to backup account & correct modal"
    commands:
      - tapOn:
          id: "notifBackup"
      - assertVisible: "Create Full Account"
      - assertVisible: "Create a username and password to create a full account and secure your funds. No personal information is required"
      - assertVisible: "Without a backup, you risk losing your funds!"
      - assertVisible: "Back Up Account"
      - assertVisible: "Learn More"
      - assertVisible: "Continue with Guest Account"
      # Backup Account button
      - tapOn: Back Up Account
      - waitForAnimationToEnd:
          timeout: 10000
      - extendedWaitUntil:
          visible: Choose Username
          timeout: 10000
      - assertVisible: Next
      - tapOn:
          id: "headerLeftButton"
      # could pause here
      # Test Receive Scene via "Deposit" button
      - tapOn: Deposit
      - tapOn: "From Another Wallet/Exchange"
      - tapOn: "BTC"
      - assertVisible: "Receive"
      - assertVisible: "To buy, sell, and receive.*"
      - assertVisible: "Back Up Account"
      - tapOn:
          id: "chevronBack"
      
      # Relogin with PIN
      - runFlow:
          file: ../common/relogin-pin.yaml
          label: "Relogin with PIN"
      # Dismiss "Discover Edge" modal
      - runFlow:
          when:
            visible: "How Did You Discover Edge?"
          commands:
            - tapOn:
                text: "Dismiss"
          label: "Dismiss Discover Edge modal"
      # Learn More button (From Assets scene so no conflict with promo card "Learn More" button)
      - tapOn: Assets
      - tapOn:
          id: "notifBackup"
      - extendedWaitUntil:
          visible: Continue with Guest Account
      - tapOn: Learn More
      - assertVisible: "Guest Account" # Support article title
      
      # Reopen to same screen and check unable to view seed phrase
      - launchApp:
          stopApp: false
      - longPressOn: BTC
      - assertNotVisible: ".*Master Private Key"
      - assertNotVisible: ".*Get Raw Keys"


      # Relogin with PIN
      - runFlow:
          file: ../common/relogin-pin.yaml
          label: "Relogin with PIN"
      # Dismiss "Discover Edge" modal
      - runFlow:
          when:
            visible: "How Did You Discover Edge?"
          commands:
            - tapOn:
                text: "Dismiss"
          label: "Dismiss Discover Edge modal"
      # Continue with Guest Account button
      - tapOn:
          id: "notifBackup"
      - tapOn: Continue with Guest Account
      - assertVisible: "Assets"


# Ensure can't view receive screen
- runFlow:
    label: "Ensure can't view receive screen"
    commands:
      # Try to view receive screen
      - tapOn: Assets
      - tapOn: BTC
      - tapOn: Receive
      # Backup account modal is accurate
      - assertVisible: "Create Full Account"
      - assertVisible: "Create a username and password to continue."
      - assertVisible: "Edge has zero access to user funds and does not see or store any private keys or personal information."
      - assertVisible: "Creating a full account ensures you can safely recover your funds in the event that you lose access to your device."
      # Backup account buttons work
      - tapOn: Learn More
      - assertVisible: "Guest Account" # Support article title
      - launchApp:
          stopApp: false
      # Starts full account creation flow
      - tapOn: Get Started
      - waitForAnimationToEnd:
          timeout: 10000
      - extendedWaitUntil:
          visible: Choose Username
          timeout: 10000
      - assertVisible: Next
      - tapOn:
          id: "headerLeftButton"

# Ensure Settings properly prompts to backup account
- runFlow:
    label: "Ensure Settings properly prompts to backup account"
    commands:
      - tapOn:
          id: "sideMenuButton"
      - tapOn: Settings
      - assertVisible: ${"Account:\ Guest Account.*"}
      - tapOn: "Back Up Account"

      # Ensure backup account modal and buttons are correct
      - assertVisible: "Create Full Account"
      - assertVisible: "Create a username and password to create a full account and secure your funds. No personal information is required"
      - assertVisible: "Without a backup, you risk losing your funds!"
      - assertVisible: "Back Up Account"
      - assertVisible: "Learn More"
      - assertVisible: "Continue with Guest Account"
      # Continue with Guest Account button
      - tapOn: Continue with Guest Account
      # Learn More button
      - tapOn: Back Up Account
      - extendedWaitUntil:
          visible: Continue with Guest Account
      - tapOn: Learn More
      - assertVisible: "Guest Account" # Support article title
      - launchApp:
          stopApp: false
      # Backup Account button
      - tapOn: Back Up Account
      # Android can target button behind modal (rather than the one in the modal)
      - runFlow:
          when:
            platform: android
          commands:
            - tapOn:
                text: "Back Up Account"
                index: 1
      # For iOS
      - tapOn: 
          text: "Back Up Account"
          optional: true
      - waitForAnimationToEnd:
          timeout: 5000
      - extendedWaitUntil:
          visible: Choose Username
          timeout: 10000
      - assertVisible: Next

# Complete backup of account
- runFlow:
    label: "Complete backup of account"
    commands:
      - inputRandomText
      - copyTextFrom:
          id: "undefined.textInput"
      - waitForAnimationToEnd:
          timeout: 2000
      - tapOn: Next
      # Test password requirements
      - runFlow:
          when: 
            true: ${MAESTRO_CHECK_PASS_REQ}
          file: ../common/password-requirements.yaml
          label: "Test password requirements on account creation"
      # Continue with backup of account
      - tapOn: Password
      - eraseText
      - inputText: ${MAESTRO_EDGE_NEW_ACCOUNT_PASSWORD}
      - pressKey: Enter
      - eraseText
      - inputText: ${MAESTRO_EDGE_NEW_ACCOUNT_PASSWORD}
      - pressKey: Enter
      - assertVisible: Account Confirmation
      - assertVisible: "Review: Terms of Use (Tap each circle to agree)"

      # Confirm TOS
      - tapOn: "I understand that my funds are held securely on this device, not by Edge"
      - tapOn: "I understand that if I lose this device or uninstall the app, my digital assets can only be recovered with my username and password"
      - tapOn: "I understand that if I lose my username and password, Edge will not be able to recover my account, unless I set up password recovery"
      - tapOn: "I understand that I am responsible for safekeeping of my passwords, private key pairs, PIN, and any other codes to access the software. Edge is not responsible if my information is compromised or accessed by a 3rd party where funds are lost"
      # View TOS article from support website
      - tapOn: "I have read, understood, and agree to the Terms of Use"
      - assertVisible: "Terms of Service / Privacy Policy"
      - launchApp:
          stopApp: false
      - tapOn: "Confirm"
      - waitForAnimationToEnd:
          timeout: 20000

      # Review details
      - assertVisible: "Review"
      - assertVisible: "Tap the dropdown below to review your account information"
      - assertVisible: ${"Warning!.*"}
      - assertVisible: "If you lose your account information, you’ll lose access to your funds permanently."
      - tapOn: ${"View account information.*"}
      - assertVisible: "Username:"
      - assertVisible: ${maestro.copiedText}
      - assertVisible: "Password:"
      - assertVisible: ${MAESTRO_EDGE_NEW_ACCOUNT_PASSWORD}
      - assertVisible: "PIN:"
      - assertVisible: ${MAESTRO_EDGE_NEW_ACCOUNT_PIN}
      - tapOn: "Create"

# Ensure account is created successfully
- runFlow:
    label: "Ensure account is created successfully"
    commands:
      - assertVisible: Settings
      - assertVisible: ${"Account:\ " + maestro.copiedText}
      - tapOn:
          id: "chevronBack"
      # Try to view receive screen
      - tapOn: Assets
      - tapOn: BTC
      - tapOn: Receive
      - assertVisible: "Receive to My Bitcoin"
      - assertVisible: "Your Segwit Address"


# Logout and login with PIN & with new account credentials
- runFlow:
    label: "Logout and login with PIN & new account credentials"
    commands:
      - tapOn:
          id: "sideMenuButton"
      - tapOn: Logout
      - assertVisible: ${maestro.copiedText}
      - assertVisible: "0"
      - assertVisible: "Help"
      - tapOn: ${MAESTRO_EDGE_NEW_ACCOUNT_PIN_SINGLE}
      - tapOn: ${MAESTRO_EDGE_NEW_ACCOUNT_PIN_SINGLE}
      - tapOn: ${MAESTRO_EDGE_NEW_ACCOUNT_PIN_SINGLE}
      - tapOn: ${MAESTRO_EDGE_NEW_ACCOUNT_PIN_SINGLE}
      - extendedWaitUntil:
          visible: "Assets"
          timeout: 5000
      - assertNotVisible: 
          id: "notifBackup"

      - tapOn:
          id: "sideMenuButton"
      - tapOn: Logout
      - tapOn: Exit PIN
      - tapOn: Password
      - inputText: ${MAESTRO_EDGE_NEW_ACCOUNT_PASSWORD}
      - pressKey: Enter
      - inputText: ${MAESTRO_EDGE_NEW_ACCOUNT_PASSWORD}
      - pressKey: Enter
      
      # Dismiss option to save password to keychain
      - tapOn:
          text: Not Now
          optional: true

      - extendedWaitUntil:
          visible: "Assets"
          timeout: 5000
      - assertNotVisible: 
          id: "notifBackup"
          label: "Logged in with PIN & new account credentials successfully"


- stopApp