# Priority: Critical
# Test ID: C000000
# Title: Change and set passwords
# Expected Result:
#   1. Unable to set passwords that do not meet requirements
#   2. Able to change password using notification modal OR from settings screen OR from "Password Recovery" feature

# !!  3. TODO: Able to change password using "Passsword Recovery" feature

appId: ${MAESTRO_APP_ID}
tags:
- all
- C000000
---
- runFlow:
    file: ../common/launch-cleared.yaml







# Create new account and test password requirements
- runFlow:
    file: ../common/create-account.yaml
    env:
      MAESTRO_CHECK_PASS_REQ: true
    label: "Create new account and test password requirements"



# OLD
# Test password requirements for account creation
- tapOn: Already have an account? Sign in
- tapOn: Create account
- extendedWaitUntil:
    visible: "Choose Username"
    timeout: 15000
# Wait for altcha to complete
- waitForAnimationToEnd:
    timeout: 10000
- inputRandomText
# Wait for next button to respond to input
- waitForAnimationToEnd:
    timeout: 10000
- pressKey: Enter

# # Verify password requirements for account creation
# - runFlow:
#     file: ../common/password-requirements.yaml
#     label: "Test password requirements on account creation"

- tapOn:
    id: "headerLeftButton"

# Login to existing account with "Forgot Password" feature
# Open deep link for "Forgot Password" feature




# Test password requirements for "Forgot Password" feature

# - runFlow:
#     file: ../common/login-password.yaml
#     env:
#       USERNAME: ${MAESTRO_EDGE_UTXO_USERNAME}
#       PASSWORD: ${MAESTRO_EDGE_UTXO_PASSWORD}
# - runFlow:
#     file: ../common/dismiss-modals.yaml




# Test password requirements from settings screen




# Test password requirements from notification modal