# Priority: Critical
# Test ID: C000004
# Title: Password Recovery
# Expected Result:
#   1. Able to set up password recovery
#   2. Able to login with password recovery
#   3. Able to change password using password recovery
#   4. Able to logout and login with new password

appId: ${MAESTRO_APP_ID}
tags:
- all
- C000004
---
- runFlow:
    file: ../common/launch-cleared.yaml

# Create new account
- runFlow:
    file: ../common/create-account.yaml
    label: "Create new account"

# Dismiss notifications/modals
- runFlow:
    file: ../common/dismiss-modals.yaml

# Navigate to Settings
- tapOn:
    id: "sideMenuButton"
- tapOn: "Settings"

# Set up password recovery
- tapOn: "Set Up Password Recovery"
- inputText: ${MAESTRO_EDGE_NEW_ACCOUNT_PASSWORD}
- pressKey: Enter
- extendedWaitUntil:
    visible: "Password Recovery"
    timeout: 15000

# Set up security questions
- tapOn: Recovery question 1
- scrollUntilVisible:
    element: What was your favorite brand of clothing in high school?
    direction: DOWN
    centerElement: true
    timeout: 50000
- tapOn: What was your favorite brand of clothing in high school?
- tapOn: Answer 1
- inputText: ${MAESTRO_EDGE_PASSWORD_RECOVERY_Q1}
- hideKeyboard: # Keyboard obscuring "Submit" button on Androids
    optional: true
- tapOn: Submit

- tapOn: Recovery question 2
- scrollUntilVisible:
    element: Who is your childhood sports hero?
    direction: DOWN
    timeout: 50000
- tapOn: Who is your childhood sports hero?
- tapOn: Answer 2
- inputText: ${MAESTRO_EDGE_PASSWORD_RECOVERY_Q2}
- hideKeyboard: # Keyboard obscuring "Submit" button on Androids
    optional: true
- tapOn: Submit


# TODO: Ensure token is accessible through copy (Confrirm & Share button)
# TODO: Ensure token is displayed in email (Confirm & Email button)
- tapOn: Confirm & Email
- tapOn: Enter your email
- inputRandomEmail
- hideKeyboard: # Keyboard obscuring "Next" button on Androids
    optional: true
- tapOn: Next

# Ensure token is displayed in email/gmail (devide dependent)
# - extendedWaitUntil:
#     visible: ${".*Gmail.*"}
#     timeout: 15000
#     optional: true



# Return to Edge
- launchApp:
    stopApp: false
- assertVisible: "Please keep your Password Recovery Token, Recovery Answers and your Edge Username securely stored in the event of needing to recover your account."
- tapOn: OK

# Login with password recovery
- runFlow:
    file: ../common/launch-cleared.yaml
- tapOn: Already have an account? Sign in
- tapOn: Forgot Password

# TODO: Adjust to use newly generated token
- inputText: ${MAESTRO_EDGE_PASSWORD_RECOVERY_TOKEN}
- pressKey: Enter
- assertVisible: ${".*username.*"}
- inputText: ${MAESTRO_EDGE_PASSWORD_RECOVERY_USERNAME}
- pressKey: Enter

# Answer security questions
- assertVisible: What was your favorite brand of clothing in high school?
- tapOn: Answer 1
- inputText: ${MAESTRO_EDGE_PASSWORD_RECOVERY_Q1}
- hideKeyboard: # Keyboard obscuring "Submit" button on Androids
    optional: true
- tapOn: Submit

- assertVisible: Who is your childhood sports hero?
- tapOn: Answer 2
- inputText: ${MAESTRO_EDGE_PASSWORD_RECOVERY_Q2}
- hideKeyboard: # Keyboard obscuring "Submit" button on Androids
    optional: true
- tapOn: Submit


# Confirm regain access to account and have ability to change password and PIN
# TODO: Verify ability to change password and PIN
- tapOn: Submit
- assertVisible: "Recovery successful! Please change your password and PIN."
- tapOn: "OK"
- assertVisible: "Change Password"
- tapOn: "SKIP"
- assertVisible: "Change PIN"
- tapOn: "SKIP"

# Dismiss modal upon entering account
- runFlow:
    when:
      visible: "How Did You Discover Edge?"
    commands:
      - tapOn: Dismiss

- assertVisible: "Assets"

- stopApp