# Priority: Critical
# Test ID: C000000
# Title: Change and set passwords
# Expected Result:
#   1. Unable to set passwords that do not meet requirements
#   2. Able to change password using notification modal OR from settings screen OR from "Password Recovery" feature

# !!  3. TODO: Able to change password using "Passsword Recovery" feature

appId: ${MAESTRO_APP_ID}
env: 
    SECOND_PASSWORD: "!654321tesT"
tags:
- all
- C000000
---
- runFlow:
    file: ../common/launch-cleared.yaml

# Create new account and test password requirements
- runFlow:
    file: ../common/create-account.yaml
    label: "Create new account"

# Dismiss modals
- runFlow:
    file: ../common/dismiss-modals.yaml

# Navigate to Settings
- tapOn:
    id: "sideMenuButton"
- tapOn: "Settings"

# Change password
- tapOn: "Change Password"
- inputText: ${MAESTRO_EDGE_NEW_ACCOUNT_PASSWORD}
- assertVisible: "Submit"
- pressKey: Enter
- tapOn: Password
- inputText: ${SECOND_PASSWORD}
- pressKey: Enter
- inputText: ${SECOND_PASSWORD}
- assertVisible: Done
- pressKey: Enter

# Confirm password changed messaging
- assertVisible: Password Changed
- assertVisible: "DO NOT FORGET YOUR PASSWORD OR RECOVERY ANSWERS! THEY CANNOT BE RECOVERED!"
- assertVisible: "Warning"
- assertVisible: "Changing your password doesn't protect compromised accounts that have already been accessed. If you believe your account has an unknown login please move remaining funds to a new account. \n\nDo not send funds to the compromised account."
- tapOn: OK


# Logout and login with new password
- tapOn:
    id: sideMenuButton
- tapOn: Logout
- tapOn: Exit PIN
- tapOn: Password
# Ensure old password doesn't work
- inputText: ${MAESTRO_EDGE_NEW_ACCOUNT_PASSWORD}
- pressKey: Enter
- assertVisible: Invalid username or password
# Ensure new password works
- tapOn:
    id: "passwordFormField.clearIcon"
- tapOn: Password
- inputText: ${SECOND_PASSWORD}
- pressKey: Enter

# Dismiss notifications/modals
- runFlow:
    file: ../common/dismiss-modals.yaml

# Ensure logged in successfully
- extendedWaitUntil:
    visible: "Assets"
    timeout: 15000
    label: "Logged in with new password"
